--- a/engines/attendance/app/views/attendance/tickets/_pre_create.html.haml
+++ b/engines/attendance/app/views/attendance/tickets/_pre_create.html.haml
@@ -5,5 +5,5 @@
 .actions
   .ui.aligned.center.text-center
     = link_to "Sim, eu desejo atualizar", create_tickets_path(@context), class: 'ui button green'
-    = link_to "Cancelar", new_ticket_path, class: 'ui button gray'
+    .ui.grau.deny.button Cancelar
   .divider
