--- a/engines/attendance/app/views/attendance/tickets/new.html.haml
+++ b/engines/attendance/app/views/attendance/tickets/new.html.haml
@@ -24,31 +24,38 @@
                   %p 
                     %small
                       %i= @ticket.cadastre_update_status
+
         - if @ticket_service.update_allow?(2)
           %tr
             %td
               %h4.ui.image.header
                 .content
-                  = link_to "Atualização de dependentes", "#"
+                  - if @ticket_service.link_create_ticket?(2)
+                    = link_to "Atualização de dependentes", attendance.pre_create_tickets_path(2), remote: true
+                  - else
+                    = link_to "Atualização de dependentes", attendance.ticket_path(@ticket.current_ticket_by_context(2))
                   %p 
                     %small
                       %i= @ticket.dependent_update_status
+                      
 
         - if @ticket_service.update_allow?(3)
           %tr
             %td
               %h4.ui.image.header
                 .content
-                  = link_to "Atualização de renda", "#"
+                  - if @ticket_service.link_create_ticket?(3)
+                    = link_to "Atualização de renda", attendance.pre_create_tickets_path(3), remote: true
+                  - else
+                    = link_to "Atualização de renda", attendance.ticket_path(@ticket.current_ticket_by_context(3))
                   %p 
                     %small
                       %i= @ticket.income_update_status
-
         %tr
           %td
             %h4.ui.image.header
               .content
-                = link_to "Atualização de dados de contato", "#"
+                = link_to "Atualização de dados de contato", attendance.pre_create_tickets_path(4), remote: true
                 %p 
                   %small
                     %i= @ticket.contact_update_status
