--- a/engines/attendance/app/views/attendance/tickets/show.html.haml
+++ b/engines/attendance/app/views/attendance/tickets/show.html.haml
@@ -3,18 +3,44 @@
   .column.text-center
     .big-divider
     .title-header 
-      Atualização cadastral
+      Detalhamento de atualização
       %small
         %p= link_to "Retonar para página inicial", attendance.new_ticket_path
 
     .big-divider
 .row
-  %table.ui.table.striped.responsive
-    %thead
-      %tr
-        %th Protocolo
-        %th Protocolo
-    %tbody 
-      %tr 
-        %td #{@ticket.id}
-        %td #{@ticket.id}
+  .column
+    %table.ui.celled.table
+      %tbody.text-center
+        %tr
+          %td    
+            %h3 Protocolo - nº #{@ticket.id} 
+            #{@ticket.ticket_context.name.humanize} -
+            #{@ticket.created_at.strftime("%d/%m/%Y - %H:%M")}
+          %td
+            %span.ui.label.blue
+              %p= @ticket.ticket_status.name.humanize
+        - if @ticket.ticket_status_id == 1
+          %tr
+            %td= link_to "Continuar atualização", continue_tickets_path(@ticket)
+          %tr
+            %td= link_to "Cancelar atualização", cancel_tickets_path(@ticket), remote: true, class: 'link-red'
+        - elsif !([2,5,6,7].include? @ticket.ticket_status_id)
+          %tr
+            %td.text-without-bold 
+              %i Aguarde o retorno da CODHAB.
+        - else
+          %tr
+            %td.text-without-bold 
+              %i Atualização finalizada.
+  .big-divider
+  .column
+    %table.ui.celled.table
+      %tbody.text-center
+        %tr
+          %td    
+            %h3 Mensagens
+        %tr
+          %td.text-without-bold 
+            %i Nenhuma mensagem para mostrar
+  .big-divider
