--- a/engines/attendance/app/views/attendance/documents/edit.html.haml
+++ b/engines/attendance/app/views/attendance/documents/edit.html.haml
@@ -4,7 +4,7 @@
     .title-header 
       Envio de documentação
       %small
-        %p= link_to "Retonar para página de atualizações", new_ticket_path
+        %p= link_to "Retonar para página anterior", :back
 
 .big-divider
 .ui.grid.container
