--- a/engines/attendance/app/views/attendance/dependents/_update_form.html.haml
+++ b/engines/attendance/app/views/attendance/dependents/_update_form.html.haml
@@ -1,3 +1,21 @@
-= simple_form_for @dependent_mirror, url: update_dependet_path(ticket_id: @ticket, dependent_id: @dependent_mirror.id), method: :put, remote: true do |f|
-  = f.input :name, input_html: { disabled: true }
-  = f.input :cpf, input_html: { class: 'cpf', disabled: true }
+= simple_form_for @dependent_mirror, url: update_dependent_path(@ticket), method: :put, validate: true, remote: true do |f|
+  = f.input :name, placeholder: "Digite o nome do dependente"
+  = f.input :cpf, input_html: { class: 'cpf '}
+  = f.input :rg, placeholder: "Informe o RG do dependente"
+  = f.input :rg_org, placeholder: "Informe o orgão do RG"
+  = f.input :rg_uf_id, as: :select, collection: ::AddressState.all, label_method: :acronym, value_method: :acronym, include_blank: 'Nenhuma'
+  = f.input :born, as: :string, input_html: { class: 'date', value: f.object.born.present? ? localize(f.object.born) : nil }
+  = f.input :gender, as: :select, collection: ::CandidateCadastre.genders.keys, include_blank: false
+  = f.input :place_birth
+  = f.association :civil_state, include_blank: false
+  = f.input :income, input_html: { class: 'coin' }
+  = f.association :kinship, include_blank: false
+  = f.association :special_condition, include_blank: false
+  = f.input :cid, placeholder: "Informe o CID (se houver)"
+  = f.input :nis, placeholder: "Infomr o NIS (se houver)"
+
+  .big-divider
+  .column.text-center
+    = f.submit "Atualizar dependente", class: 'ui button yellow', data: { disable_with: t(:disable_with)}
+    = link_to "Cancelar", dependents_path(@ticket), class: 'ui button gray', data: { disable_with: t(:disable_with)}
+  
