--- a/engines/attendance/app/views/attendance/documents/_form.html.haml
+++ b/engines/attendance/app/views/attendance/documents/_form.html.haml
@@ -85,10 +85,40 @@
         = link_to_add_fields "Adicionar arquivo", f, :payment_uploads
       %hr/
 
+
+
+    - if @service.is_required? :certificate_born_uploads
+      .column 
+        %label 
+          %b Certidão de nascimento dos filhos e demais dependentes legais e CPF se a idade for maior ou igual a 14 anos
+      .divider
+      .column 
+        = f.fields_for :certificate_born_uploads do |builder|
+          = render 'certificate_born_upload_fields', f: builder
+        = link_to_add_fields "Adicionar arquivo", f, :certificate_born_uploads
+      %hr/
+
+    - if @service.is_required? :income_uploads
+      .column 
+        %label 
+          %b Comprovantes de renda 
+      .divider
+      .column 
+        = f.fields_for :income_uploads do |builder|
+          = render 'income_upload_fields', f: builder
+        = link_to_add_fields "Adicionar arquivo", f, :income_uploads
+      %hr/
+    - if @service.is_required? :special_condition_uploads
+      .column 
+        %label 
+          %b Comprovantes de necessidades especiais
+      .divider
+      .column 
+        = f.fields_for :special_condition_uploads do |builder|
+          = render 'special_condition_upload_fields', f: builder
+        = link_to_add_fields "Adicionar arquivo", f, :special_condition_uploads
+      %hr/
   .big-divider
   .field.text-center
-    - if @service.nothing_required?
-      = f.submit "Finalizar meu atendimento", class: 'ui button green'
-    - else
-      = f.submit "Enviar documentação", class: 'ui button green'
+    = f.submit "Enviar documentação", class: 'ui button yellow'
     
