--- a/engines/attendance/app/views/attendance/chat_comments/new.html.haml
+++ b/engines/attendance/app/views/attendance/chat_comments/new.html.haml
@@ -2,10 +2,9 @@
 .ui.grid.container
   .column.text-center
     .title-header
-      Novo chat
+      Novo comentário
       %small
         %p= link_to "Retonar para página de atualizações", chats_path
-
 .big-divider
 .ui.grid.container
   .column.content-form
