--- a/engines/attendance/app/views/attendance/notifications/show.html.haml
+++ b/engines/attendance/app/views/attendance/notifications/show.html.haml
@@ -1,10 +1,10 @@
 .big-divider
 .ui.grid.container
   .column.text-center
-    .title-header 
+    .title-header
       Notificações
       %small
-        %p= link_to "Retonar para página de notifications", notifications_path
+        %p= link_to "Retonar para página de notificações", notifications_path
 
 .big-divider
 .ui.container-fluid
