--- a/engines/candidate/app/views/candidate/home/show.html.haml
+++ b/engines/candidate/app/views/candidate/home/show.html.haml
@@ -28,7 +28,7 @@
       Notificações
   .column
     .ui.segment.text-center
-      %a{href: "#{attendance.new_ticket_path}"}
+      %a{href: "#{attendance.new_context_path}"}
         %i.icon.edit.big.gray
     .text-center.bold
       Atualizar Meus Dados
